feat: Add CI deploy

--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:mysql://127.0.0.1:3306/mydatabase
+flyway.url=jdbc:mysql://127.0.0.1:3306/mydatabase?allowPublicKeyRetrieval=true
 flyway.user=myuser
 flyway.password=mypassword
 
