--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
           username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
-          key: ${{ secrets.REMOTE_SSH_KEY }}           # Your private key stored in GitHub Secrets
+          key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
           port: 22                                     # Adjust if needed
           script: |
             FOLDER_NAME="lab"
