--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -26,6 +26,7 @@ jobs:
         with:
           host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
           username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
+          key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
           password: ${{ secrets.REMOTE_PASSWORD }}
           port: 22                                     # Adjust if needed
           script: |
