--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install Git
+        run: |
+          sudo apt-get install -y git
+          git --version
+
       - name: Get Release Tag
         # This step extracts the release tag (e.g. v1.2.3-rc) from the GitHub event payload
         id: get_tag
