--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -13,11 +13,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install Git
-        run: |
-          sudo apt-get install -y git
-          git --version
-
       - name: Get Release Tag
         # This step extracts the release tag (e.g. v1.2.3-rc) from the GitHub event payload
         id: get_tag
@@ -32,7 +27,7 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
           username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
           key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
-          password: ${{ secrets.REMOTE_PASSWORD }}
+          # password: ${{ secrets.REMOTE_PASSWORD }}
           port: 22                                     # Adjust if needed
           script: |
             FOLDER_NAME="lab"
