--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -52,7 +52,7 @@ jobs:
             git fetch --all
             git checkout ${{ steps.get_tag.outputs.tag_name }}
             git pull origin ${{ steps.get_tag.outputs.tag_name }} || true
-            docker compose build --no-cache
+            docker compose build
             docker compose up -d
 
             # 6) Validate containers are running
