fix: Fix docker-compose command

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -54,7 +54,5 @@ jobs:
             git pull origin ${{ steps.get_tag.outputs.tag_name }} || true
             docker-compose build
             docker-compose up -d --force-recreate
-
-            # 6) Validate containers are running
-            docker compose ps
+            docker-compose ps
             echo "Prerelease deployment completed successfully!"
