--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -1,14 +1,12 @@
-name: Deploy staging
+name: Deploy preprod
 
 on:
-  # release:
-  #   types: [prereleased]
-  push:
-    branches:
-      - main
+  release:
+    types: [prereleased]
 
 jobs:
   deploy:
+    environment: preprod
     name: Deploy to Remote Server for Prerelease
     runs-on: ubuntu-latest
 
@@ -27,7 +25,6 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
           username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
           key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
-          # password: ${{ secrets.REMOTE_PASSWORD }}
           port: 22                                     # Adjust if needed
           script: |
             FOLDER_NAME="lab"
