--- a/.github/workflows/hotfix.yaml
+++ b/.github/workflows/hotfix.yaml
@@ -1,3 +1,5 @@
+name: release-please
+
 on:
   workflow_dispatch:
     inputs:
@@ -9,16 +11,13 @@ permissions:
   contents: write
   pull-requests: write
 
-name: release-please
-
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v4
+      - name: Run Release Please
+        uses: google-github-actions/release-please-action@v4
         with:
-          # github-api-url: https://git.com/api/v3
-          # github-graphql-url: https://git.com/api
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: simple
           bump-minor-pre-major: true
