chore: Change instance name

--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -24,7 +24,7 @@ jobs:
     - id: 'compute-ssh'
       uses: 'google-github-actions/ssh-compute@v1'
       with:
-        instance_name: 'example-instance'
+        instance_name: 'redexwebsiteuat'
         zone: 'asia-southeast1-a'
         ssh_private_key: '${{ secrets.GCP_SSH_PRIVATE_KEY }}'
         command: 'echo Hello world'
