chore: Add perm

--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -26,11 +26,8 @@ jobs:
 
     - name: Deploy to Google Cloud VM
       run: |
-        ls -la /home/runner/.ssh
-
-    - name: Deploy to Google Cloud VM
-      run: |
         ls -la /home/runner/.ssh/id_rsa
+        sudo chmod 400 /home/runner/.ssh/id_rsa
         ssh -i /home/runner/.ssh/id_rsa -o StrictHostKeyChecking=no -T ${{ secrets.GCP_REMOTE_USER }}@${{ secrets.GCP_REMOTE_HOST }} 'ls -l'
 
     # - id: 'auth'
