--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -19,7 +19,7 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         echo "${{secrets.GCP_SSH_PRIVATE_KEY}}" > ~/.ssh/google_compute_engine
-        chmod 600 ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/google_compute_engine
         ssh-keyscan -t rsa  ${{secrets.GCP_REMOTE_HOST}} >> ~/.ssh/known_hosts
     - name: Deploy to Google Cloud VM
       run: |
