--- a/ansible-playbooks/roles/deployredexweb/defaults/main.yaml
+++ b/ansible-playbooks/roles/deployredexweb/defaults/main.yaml
@@ -1,4 +1,4 @@
 ---
-repo_url: "https://github.com/capbash/samplephp"
+repo_url: "https://github.com/Crimrose/lab.git"
 http_host: "kien.com"
 branch: "{{ lookup('env', 'BRANCH') | default('main', true) }}"
