--- a/.github/workflows/gcp.yaml
+++ b/.github/workflows/gcp.yaml
@@ -3,7 +3,7 @@ name: Deploy gcp test
 on:
   push:
     branches:
-      - main
+      - main-test
 
 jobs:
   job_id:
@@ -13,7 +13,7 @@ jobs:
       id-token: 'write'
 
     steps:
-    # - uses: 'actions/checkout@v4'
+    - uses: 'actions/checkout@v4'
 
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.2.0
