--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -31,10 +31,18 @@ jobs:
           TAG_NAME="${GITHUB_REF##*/}"
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
 
-      - name: Install Ansible
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ansible
+      - name: "Install Ansible"
+        uses: alex-oleshkevich/setup-ansible@master 
+        with:
+          version: "11.1.0"
+
+      - name: "Print Ansible version"
+        run: ansible-playbook --version
+
+      # - name: Install Ansible
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y ansible
 
       - name: Deploy playbook
         run: |
