--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -49,6 +49,15 @@ jobs:
           export BRANCH=${{ steps.get_tag.outputs.tag_name }}
           cd ansible-playbooks
           ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/KienTran.pem --limit staging --tag=deploy
+          URL="127.0.0.1"  # Replace with your actual URL
+          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" "$URL")
+          if [ "$HTTP_STATUS" -ne 200 ]; then
+            echo "Error: $URL did not return HTTP 200."
+            exit 1  # Exit with failure
+          else
+            echo "Success: $URL is up and returned HTTP 200."
+          fi
+
       # - name: SSH to Remote VM and Deploy
       #   uses: appleboy/ssh-action@master
       #   with:
