--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -49,13 +49,19 @@ jobs:
           export BRANCH=${{ steps.get_tag.outputs.tag_name }}
           cd ansible-playbooks
           ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/KienTran.pem --limit staging --tag=deploy
-          URL="127.0.0.1"  # Replace with your actual URL
-          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" "$URL")
+          URL="http://127.0.0.1"  # Replace with your actual URL
+          RETRIES=3               # Number of retry attempts
+          TIMEOUT=5               # Optional: time to wait for each retry in seconds
+
+          # Execute curl with retry logic
+          HTTP_STATUS=$(curl --retry "$RETRIES" --retry-delay 2 --max-time "$TIMEOUT" -s -o /dev/null -w "%{http_code}" "$URL")
+
           if [ "$HTTP_STATUS" -ne 200 ]; then
-            echo "Error: $URL did not return HTTP 200."
+            echo "Error: $URL did not return HTTP 200 after $RETRIES attempts. Status: $HTTP_STATUS"
             exit 1  # Exit with failure
           else
             echo "Success: $URL is up and returned HTTP 200."
+            exit 0  # Exit with success
           fi
 
       # - name: SSH to Remote VM and Deploy
