--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -18,7 +18,7 @@ jobs:
           # Create .ssh folder
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/KienTran.pem
-          chmod 600 ~/.ssh/KienTran.pem
+          chmod 600 ~/.ssh/google_compute_engine
 
       - name: Get Release Tag
         # This step extracts the release tag (e.g. v1.2.3-rc) from the GitHub event payload
@@ -40,7 +40,7 @@ jobs:
         run: |
           export BRANCH=${{ steps.get_tag.outputs.tag_name }}
           cd ansible-playbooks
-          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/KienTran.pem --limit staging --tag=deploy
+          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine--limit staging --tag=deploy
 
       # - name: SSH to Remote VM and Deploy
       #   uses: appleboy/ssh-action@master
