--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -33,14 +33,14 @@ jobs:
         with:
           version: "11.1.0"
 
-      - name: "Print Ansible version"
-        run: ansible-playbook --version
-
       - name: Deploy playbook
+        env:
+          ANSIBLE_USER: ${{ secrets.ANSIBLE_USER }}
+          ANSIBLE_PASS: ${{ secrets.ANSIBLE_PASS }}
         run: |
           export BRANCH=${{ steps.get_tag.outputs.tag_name }}
           cd ansible-playbooks
-          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine --limit staging --tag=deploy
+          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine --limit staging --tag=deploy --extra-vars "ansible_user=$ANSIBLE_USER ansible_password=$ANSIBLE_PASS"
 
       # - name: SSH to Remote VM and Deploy
       #   uses: appleboy/ssh-action@master
