--- a/.github/workflows/preprod.yaml
+++ b/.github/workflows/preprod.yaml
@@ -40,7 +40,7 @@ jobs:
         run: |
           export BRANCH=${{ steps.get_tag.outputs.tag_name }}
           cd ansible-playbooks
-          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine --limit staging --tag=deploy --extra-vars "ansible_user=$ANSIBLE_USER ansible_password=$ANSIBLE_PASS"
+          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine --limit staging --tag=deploy --extra-vars "ansible_user=$ANSIBLE_USER ansible_sudo_pass=$ANSIBLE_PASS"
 
       # - name: SSH to Remote VM and Deploy
       #   uses: appleboy/ssh-action@master
