--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -6,11 +6,20 @@ on:
 
 jobs:
   deploy:
-    environment: production
-    name: Deploy to Remote Server for Release
+    # environment: preprod
+    name: Deploy to Remote Server for Prerelease
     runs-on: ubuntu-latest
 
     steps:
+      - uses: 'actions/checkout@v4'
+
+      - name: Set up SSH key
+        run: |
+          # Create .ssh folder
+          mkdir -p ~/.ssh
+          echo "${{ secrets.GCP_SSH_PRIVATE_KEY }}" > ~/.ssh/google_compute_engine
+          chmod 600 ~/.ssh/google_compute_engine
+
       - name: Get Release Tag
         # This step extracts the release tag (e.g. v1.2.3-rc) from the GitHub event payload
         id: get_tag
@@ -19,37 +28,27 @@ jobs:
           TAG_NAME="${GITHUB_REF##*/}"
           echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
 
-      - name: SSH to Remote VM and Deploy
-        uses: appleboy/ssh-action@master
+      - name: "Install Ansible"
+        uses: alex-oleshkevich/setup-ansible@master 
         with:
-          host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
-          username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
-          key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
-          port: 22                                     # Adjust if needed
-          script: |
-            FOLDER_NAME="lab"
-            echo "Deploying prerelease: ${{ steps.get_tag.outputs.tag_name }}"
+          version: "11.1.0"
+
+      - name: Deploy playbook
+        env:
+          ANSIBLE_USER: ${{ secrets.ANSIBLE_USER }}
+          ANSIBLE_PASS: ${{ secrets.ANSIBLE_PASS }}
+        run: |
+          export BRANCH=${{ steps.get_tag.outputs.tag_name }}
+          cd ansible-playbooks
+          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine --limit staging --tag=deploy --extra-vars "ansible_user=$ANSIBLE_USER ansible_sudo_pass=$ANSIBLE_PASS ansible_ssh_pass=$ANSIBLE_PASS"
+
+      # - name: SSH to Remote VM and Deploy
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
+      #     username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
+      #     port: 22                                     # Adjust if needed
+      #     script: |
+      #       echo "Deploying prerelease: ${{ steps.get_tag.outputs.tag_name }}"
             
-            mkdir -p /tmp/redex
-
-            cd /tmp/redex
-
-            # Check if folder exists
-            if [ -d "$FOLDER_NAME" ]; then
-              echo "Folder '$FOLDER_NAME' already exists."
-              echo "Navigating to '$FOLDER_NAME'..."
-              cd "$FOLDER_NAME"
-            else
-              echo "Folder '$FOLDER_NAME' does NOT exist."
-              echo "Cloning repository:"
-              git clone https://github.com/Crimrose/lab.git "$FOLDER_NAME"
-              echo "Navigating to '$FOLDER_NAME'..."
-              cd "$FOLDER_NAME"
-            fi            
-            git fetch --all
-            git checkout ${{ steps.get_tag.outputs.tag_name }}
-            git pull origin ${{ steps.get_tag.outputs.tag_name }} || true
-            docker-compose build
-            docker-compose up -d --force-recreate
-            docker-compose ps
-            echo "Prerelease deployment completed successfully!"
