--- a/ansible-playbooks/roles/mysql/tasks/main.yaml
+++ b/ansible-playbooks/roles/mysql/tasks/main.yaml
@@ -8,7 +8,7 @@
 - name: "Set MySQL root password"
   block:
     - name: "Try setting MySQL root password via Unix socket (no existing password)"
-      mysql_user:
+      community.mysql.mysql_user:
         name: root
         password: "{{ mysql_root_password }}"
         host: localhost
@@ -22,7 +22,7 @@
         msg: "MySQL root password task finished."
 
 - name: "Create MySQL backup user"
-  mysql_user:
+  community.mysql.mysql_user:
     name: "{{ mysql_backup_user }}"
     password: "{{ mysql_backup_user_password }}"
     login_user: root
@@ -32,16 +32,9 @@
     priv: "*.*:SELECT,LOCK TABLES,SHOW VIEW,RELOAD"
 
 - name: Removes all anonymous user accounts
-  mysql_user:
+  community.mysql.mysql_user:
     name: ''
     host_all: yes
     state: absent
     login_user: root
     login_password: "{{ mysql_root_password }}"
-
-- name: Removes the MySQL test database
-  mysql_db:
-    name: test
-    state: absent
-    login_user: root
-    login_password: "{{ mysql_root_password }}"  
