--- a/flyway.conf
+++ b/flyway.conf
@@ -1,7 +1,7 @@
 flyway.url=jdbc:mysql://127.0.0.1:3306/mydatabase?allowPublicKeyRetrieval=true
-flyway.user=myuser
-flyway.password=mypassword
+flyway.user=root
+flyway.password=mysql_root_password
 
 # Path where Flyway finds SQL migrations
-flyway.locations=filesystem:/home/kien/Desktop/lab/migration
+flyway.locations=filesystem:/var/www/kien.com/migration
 flyway.baselineOnMigrate=true
