--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -13,13 +13,6 @@ jobs:
     steps:
       - uses: 'actions/checkout@v4'
 
-      - name: Set up SSH key
-        run: |
-          # Create .ssh folder
-          mkdir -p ~/.ssh
-          echo "${{ secrets.GCP_SSH_PRIVATE_KEY }}" > ~/.ssh/google_compute_engine
-          chmod 600 ~/.ssh/google_compute_engine
-
       - name: Get Release Tag
         # This step extracts the release tag (e.g. v1.2.3-rc) from the GitHub event payload
         id: get_tag
@@ -40,15 +33,6 @@ jobs:
         run: |
           export BRANCH=${{ steps.get_tag.outputs.tag_name }}
           cd ansible-playbooks
-          ansible-playbook playbook.yml -i inventory.ini --private-key ~/.ssh/google_compute_engine --limit staging --tag=deploy --extra-vars "ansible_user=$ANSIBLE_USER ansible_sudo_pass=$ANSIBLE_PASS ansible_ssh_pass=$ANSIBLE_PASS"
+          ansible-playbook playbook.yml -i inventory.ini --limit staging --tag=deploy --extra-vars "ansible_user=$ANSIBLE_USER ansible_sudo_pass=$ANSIBLE_PASS ansible_ssh_pass=$ANSIBLE_PASS"
 
-      # - name: SSH to Remote VM and Deploy
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.REMOTE_HOST }}             # e.g. '123.45.67.89'
-      #     username: ${{ secrets.REMOTE_USER }}         # e.g. 'ubuntu'
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}           # Your private key stored in GitHub Secrets
-      #     port: 22                                     # Adjust if needed
-      #     script: |
-      #       echo "Deploying prerelease: ${{ steps.get_tag.outputs.tag_name }}"
             
